baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_optional_function_parameters/bytecode.snap
---
source: crates/baml_tests/src/corpus.rs
---
function fixtures.optional_function_parameters.AskDocs(query: string, max_results: int, filter: string, client: ai.Client | null, on_event: ((ai.events.RunStarted | ai.events.UserMessage | ai.events.AssistantMessage | ai.events.ToolRequested | ai.events.ToolCompleted | ai.events.ToolFailed | ai.events.Usage | ai.events.LLMCall | ai.events.FinalProduced) -> void throws never) | null) -> string {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_var on_event
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    load_const null
    store_var on_event

  L1:
    load_type unknown
    load_const <omitted>
    load_const <omitted>
    load_var client
    load_const <omitted>
    load_var on_event
    call ai.Agent.new
    store_var _9
    load_var2 1 2
    load_var filter
    call user.fixtures.optional_function_parameters.AskDocs@spec
    store_var _11
    load_type string
    load_var2 6 7
    load_type ai.Runner<Error = baml.errors.InvalidArgument | baml.errors.Timeout | baml.errors.UnknownError | reflect.errors.CompilationError | ai.errors.Failure>
    load_const "run"
    virtual_call nargs=2 ntypeargs=1
    load_field .value
    return
}

function fixtures.optional_function_parameters.AskDocs@build_request(query: string, max_results: int, filter: string, client: ai.Client | null) -> baml.http.Request {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_var2 1 2
    load_var filter
    call user.fixtures.optional_function_parameters.AskDocs@spec
    store_var _6
    load_type string
    load_var2 5 4
    call ai.FunctionSpec.build_request
    return
}

function fixtures.optional_function_parameters.AskDocs@parse(json: string) -> string {
    load_type string
    load_var json
    call baml.sap.parse
    return
}

function fixtures.optional_function_parameters.AskDocs@render_prompt(query: string, max_results: int, filter: string) -> ai.Prompt {
    load_var2 1 2
    load_var filter
    call user.fixtures.optional_function_parameters.AskDocs@spec
    store_var _4
    load_type string
    load_var _4
    call ai.FunctionSpec.prompt
    return
}

function fixtures.optional_function_parameters.AskDocs@spec(query: string, max_results: int, filter: string) -> ai.FunctionSpec<string> {
    load_var ?1
    make_cell
    store_var ?1
    load_var ?2
    make_cell
    store_var ?2
    load_var ?3
    make_cell
    store_var ?3
    load_type ai.tools.Tool
    alloc_array 0
    call ai.tools.Toolbox.new
    store_var _9
    load_type never
    load_global user.fixtures.optional_function_parameters.TestClient
    make_closure .<lambda(AskDocs@spec, 1)>, 0
    load_const "openai"
    load_const "openai-chat"
    load_const "openai-images"
    load_const "azure"
    load_const "ollama"
    load_const "openrouter"
    load_const "anthropic"
    load_const "google"
    load_const "vertex"
    load_const "bedrock"
    load_const "ai-gateway-images"
    load_const "claude-code"
    load_type string
    alloc_array 12
    call ai.clients.resolve
    store_var _11
    load_const "AskDocs"
    load_deref ?1
    load_deref ?2
    load_deref ?3
    load_const "query"
    load_const "max_results"
    load_const "filter"
    load_type string
    load_type unknown
    alloc_map 3
    load_var2 1 2
    load_var filter
    make_closure .<lambda(AskDocs@spec, 0)>, 3
    load_var2 4 5
    load_type string
    init_instance<1> ai.FunctionSpec .spec_name, .args, .prompt_template, .toolbox, .default_client
    return
}

function fixtures.optional_function_parameters.AskDocs@stream(query: string, max_results: int, filter: string, client: ai.stream.StreamingClient | null, on_event: ((ai.events.RunStarted | ai.events.UserMessage | ai.events.AssistantMessage | ai.events.ToolRequested | ai.events.ToolCompleted | ai.events.ToolFailed | ai.events.Usage | ai.events.LLMCall | ai.events.FinalProduced) -> void throws never) | null) -> ai.stream.Stream<string | null, string> {
    load_var client
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var client

  L0:
    load_var on_event
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    load_const null
    store_var on_event

  L1:
    load_var2 1 2
    load_var filter
    call user.fixtures.optional_function_parameters.AskDocs@spec
    store_var _8
    load_type string | null
    load_type string
    load_var2 6 4
    load_var on_event
    call ai.stream.from_spec
    return
}

function fixtures.optional_function_parameters.DefaultFilter() -> string {
    load_const "none"
    return
}

function fixtures.optional_function_parameters.HostEntry(query: string, max_results: int, filter: string | null) -> int {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    load_const null
    store_var filter

  L1:
    load_var filter
    load_const null
    call baml.ops.equals_equals
    pop_jump_if_true L2
    load_var max_results
    load_const 100
    add_int
    jump L3

  L2:
    load_var max_results

  L3:
    return
}

function fixtures.optional_function_parameters.Search(query: string, max_results: int, filter: string) -> int {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    load_const "none"
    store_var filter

  L1:
    load_var max_results
    return
}

function fixtures.optional_function_parameters.SearchDocs(query: string, max_results: int, filter: string | null, chunk_size: int) -> string[] {
    load_var max_results
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 10
    store_var max_results

  L0:
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L1
    load_const null
    store_var filter

  L1:
    load_var chunk_size
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L2
    load_var query
    call baml.String.length
    store_var chunk_size

  L2:
    load_var query
    load_type string
    alloc_array 1
    return
}

function fixtures.optional_function_parameters.SearchService.Docs(self: fixtures.optional_function_parameters.SearchService, query: string, filter: string | null) -> string[] {
    load_var filter
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const null
    store_var filter

  L0:
    load_var query
    load_const <omitted>
    load_var filter
    load_const <omitted>
    call user.fixtures.optional_function_parameters.SearchDocs
    return
}

function fixtures.optional_function_parameters.SearchService.Run(self: fixtures.optional_function_parameters.SearchService, query: string, limit: int) -> int {
    load_var limit
    load_const <omitted>
    cmp_op ==
    pop_jump_if_false L0
    load_const 20
    store_var limit

  L0:
    load_var2 2 3
    load_var self
    load_field .base
    call user.fixtures.optional_function_parameters.Search
    return
}

function fixtures.optional_function_parameters.UseMixedArgs() -> int {
    load_const "dogs"
    load_const 3
    load_const "all"
    call user.fixtures.optional_function_parameters.Search
    return
}

function fixtures.optional_function_parameters.UseNamedDefaults() -> int {
    load_const "cats"
    load_const 5
    load_const "recent"
    call user.fixtures.optional_function_parameters.Search
    return
}

function fixtures.optional_function_parameters.UseOptionalDropping() -> string[] {
    load_var ?1
    make_cell
    store_var ?1
    load_const user.fixtures.optional_function_parameters.SearchDocs
    store_deref ?1
    load_const "cats"
    load_const "recent"
    load_var _2
    make_closure .<optional-adapter(UseOptionalDropping, 0)>, 1
    call_indirect
    return
}

function fixtures.optional_function_parameters.UseRequiredByName() -> string[] {
    load_const "birds"
    load_const <omitted>
    load_const <omitted>
    load_const <omitted>
    call user.fixtures.optional_function_parameters.SearchDocs
    return
}
