baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_optional_function_parameters/hir.snap
---
source: crates/baml_tests/src/corpus.rs
---
=== HIR ===
class user.fixtures.optional_function_parameters.SearchService {
  base: string
}
type user.fixtures.optional_function_parameters.NarrowSearcher = (query: string, filter?: string?) -> string[] throws never
type user.fixtures.optional_function_parameters.Searcher = (query: string, max_results?: int) -> int throws never
function user.fixtures.optional_function_parameters.AskDocs(query: string, max_results: int, filter: string, client: ai.Client? = null, on_event: (ai.events.Event) -> void? = null) -> string  [llm] {
  ai.Agent.new(client = client, on_event = on_event).run(AskDocs@spec(query, max_results, filter)).value
}
function user.fixtures.optional_function_parameters.AskDocs@build_request(query: string, max_results: int, filter: string, client: ai.Client? = null) -> baml.http.Request  [expr] {
  AskDocs@spec(query, max_results, filter).build_request(client = client)
}
function user.fixtures.optional_function_parameters.AskDocs@parse(json: string) -> string  [expr] {
  baml.sap.parse(json)
}
function user.fixtures.optional_function_parameters.AskDocs@render_prompt(query: string, max_results: int, filter: string) -> ai.Prompt  [expr] {
  AskDocs@spec(query, max_results, filter).prompt()
}
function user.fixtures.optional_function_parameters.AskDocs@spec(query: string, max_results: int, filter: string) -> ai.FunctionSpec<string>  [expr] {
  ai.FunctionSpec { spec_name: "AskDocs", args: map { "query": query, "max_results": max_results, "filter": filter }, prompt_template: ( __spec_output_format: ai.OutputFormat) -> { { let ctx = ai.internal.SpecCtx { _output_format:  __spec_output_format }; let  __spec_tagged_prompt = { let  __tt_parts: string[] = []; let  __tt_values: unknown[] = []; let  __tt_cur = "";  __tt_parts.push( __tt_cur);  __tt_cur = "";  __tt_values.push({  } query);  __tt_cur =  __tt_cur Add " ";  __tt_parts.push( __tt_cur);  __tt_cur = "";  __tt_values.push({  } max_results);  __tt_cur =  __tt_cur Add " ";  __tt_parts.push( __tt_cur);  __tt_cur = "";  __tt_values.push({  } filter);  __tt_parts.push( __tt_cur) } baml.TaggedString { parts:  __tt_parts, values:  __tt_values } } ai.internal.assemble_llm_prompt( __spec_tagged_prompt.parts,  __spec_tagged_prompt.values) catch_all ( __prompt_render_err) { _ => throw ai.errors.PromptRenderError { message: "prompt template r...", cause:  __prompt_render_err } } }, toolbox: ai.tools.Toolbox.new([]), default_client: ai.clients.resolve(TestClient, (prefix: string, model: string) -> ai.Client? { match (prefix) { "openai" => openai.ResponsesClient.new(model = model), "openai-chat" => openai.ChatClient.new(model = model), "openai-images" => openai.ImageClient.new(model = model), "ollama" => openai.OllamaClient.new(model = model), "openrouter" => openai.OpenRouterClient.new(model = model), "anthropic" => anthropic.Client.new(model = model), "typesafeai" => typesafeai.Client.new(model = model), "google" => google.GeminiClient.new(model = model), "vertex" => google.VertexClient.new(model = model), "bedrock" => aws.BedrockClient.new(model = model), "ai-gateway-images" => vercel.AiGatewayImageClient.new(model = model), "claude-code" => claude_code.ClaudeCodeClient.new(model = model), _ => null } }, ["openai", "openai-chat", "openai-images", "ollama", "openrouter", "anthropic", "typesafeai", "google", "vertex", "bedrock", "ai-gateway-images", "claude-code"]) }
}
function user.fixtures.optional_function_parameters.AskDocs@stream(query: string, max_results: int, filter: string, client: ai.stream.StreamingClient? = null, on_event: (ai.events.Event) -> void? = null) -> ai.stream.Stream<string>  [expr] {
  ai.stream.from_spec(AskDocs@spec(query, max_results, filter), client = client, on_event = on_event)
}
function user.fixtures.optional_function_parameters.DefaultFilter() -> string  [expr] {
  {  } "none"
}
function user.fixtures.optional_function_parameters.Docs(self: ?, query: string, filter: string? = null) -> string[]  [expr] {
  {  } SearchDocs(query, filter = filter)
}
function user.fixtures.optional_function_parameters.HostEntry(query: string, max_results: int = 10, filter: string? = null) -> int  [expr] {
  {  } if (filter Eq null) {  } max_results else {  } max_results Add 100
}
function user.fixtures.optional_function_parameters.Run(self: ?, query: string, limit: int = 20) -> int  [expr] {
  {  } Search(query = query, max_results = limit, filter = self.base)
}
function user.fixtures.optional_function_parameters.Search(query: string, max_results: int = 10, filter: string = "none") -> int  [expr] {
  {  } max_results
}
function user.fixtures.optional_function_parameters.SearchDocs(query: string, max_results: int = 10, filter: string? = null, chunk_size: int = query.length()) -> string[]  [expr] {
  {  } [query]
}
function user.fixtures.optional_function_parameters.UseMixedArgs() -> int  [expr] {
  {  } Search("dogs", max_results = 3, filter = "all")
}
function user.fixtures.optional_function_parameters.UseNamedDefaults() -> int  [expr] {
  {  } Search(query = "cats", max_results = 5, filter = "recent")
}
function user.fixtures.optional_function_parameters.UseOptionalDropping() -> string[]  [expr] {
  { let narrowed: user.fixtures.optional_function_parameters.NarrowSearcher = SearchDocs } narrowed("cats", filter = "recent")
}
function user.fixtures.optional_function_parameters.UseRequiredByName() -> string[]  [expr] {
  {  } SearchDocs(query = "birds")
}

--- captures ---
lambda ( __spec_output_format) in AskDocs@spec: captures [query, max_results, filter]
