baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_optional_function_parameters/mir.snap
---
source: crates/baml_tests/src/corpus.rs
---
=== MIR2 ===
fn user.fixtures.optional_function_parameters.DefaultFilter() -> string {
    // Locals:
    let _0: string // _0 // return

    bb0: {
        _0 = const "none";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.Search(query: string, max_results: int, filter: string) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string // filter // param
    let _4: bool
    let _5: bool

    bb0: {
        _4 = copy _2 == const <omitted>;
        branch copy _4 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _5 = copy _3 == const <omitted>;
        branch copy _5 -> [bb3, bb4];
    }

    bb3: {
        _3 = const "none";
        goto -> bb4;
    }

    bb4: {
        _0 = copy _2;
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.SearchDocs(query: string, max_results: int, filter: string | null, chunk_size: int) -> string[] {
    // Locals:
    let _0: string[] // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string | null // filter // param
    let _4: int // chunk_size // param
    let _5: bool
    let _6: bool
    let _7: bool

    bb0: {
        _5 = copy _2 == const <omitted>;
        branch copy _5 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _6 = copy _3 == const <omitted>;
        branch copy _6 -> [bb3, bb4];
    }

    bb3: {
        _3 = const null;
        goto -> bb4;
    }

    bb4: {
        _7 = copy _4 == const <omitted>;
        branch copy _7 -> [bb5, bb6];
    }

    bb5: {
        _4 = call const fn baml.String.length(copy _1) -> [bb6];
    }

    bb6: {
        _0 = [copy _1]: string[];
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.UseNamedDefaults() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        _0 = call const fn user.fixtures.optional_function_parameters.Search(const "cats", const 5_i64, const "recent") -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.UseMixedArgs() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        _0 = call const fn user.fixtures.optional_function_parameters.Search(const "dogs", const 3_i64, const "all") -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.UseRequiredByName() -> string[] {
    // Locals:
    let _0: string[] // _0 // return

    bb0: {
        _0 = call const fn user.fixtures.optional_function_parameters.SearchDocs(const "birds", const <omitted>, const <omitted>, const <omitted>) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.UseOptionalDropping() -> string[] {
    // Locals:
    let _0: string[] // _0 // return
    let _1: (string, string | null) -> string[] throws never // narrowed
    let _2: (string, string | null) -> string[] throws never

    bb0: {
        _1 = const fn user.fixtures.optional_function_parameters.SearchDocs;
        _2 = copy _1;
        _0 = call copy _2(const "cats", const "recent") -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.HostEntry(query: string, max_results: int, filter: string | null) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string | null // filter // param
    let _4: bool
    let _5: bool
    let _6: bool

    bb0: {
        _4 = copy _2 == const <omitted>;
        branch copy _4 -> [bb1, bb2];
    }

    bb1: {
        _2 = const 10_i64;
        goto -> bb2;
    }

    bb2: {
        _5 = copy _3 == const <omitted>;
        branch copy _5 -> [bb3, bb4];
    }

    bb3: {
        _3 = const null;
        goto -> bb4;
    }

    bb4: {
        _6 = call const fn baml.ops.equals_equals(copy _3, const null) -> [bb5];
    }

    bb5: {
        branch copy _6 -> [bb7, bb6];
    }

    bb6: {
        _0 = copy _2 + const 100_i64;
        goto -> bb8;
    }

    bb7: {
        _0 = copy _2;
        goto -> bb8;
    }

    bb8: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.AskDocs(query: string, max_results: int, filter: string, client: null | ai.Client, on_event: null | ((ai.events.AssistantMessage | ai.events.FinalProduced | ai.events.LLMCall | ai.events.RunStarted | ai.events.ToolCompleted | ai.events.ToolFailed | ai.events.ToolRequested | ai.events.Usage | ai.events.UserContent | ai.events.UserMessage) -> void throws never)) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string // filter // param
    let _4: null | ai.Client // client // param
    let _5: null | ((ai.events.AssistantMessage | ai.events.FinalProduced | ai.events.LLMCall | ai.events.RunStarted | ai.events.ToolCompleted | ai.events.ToolFailed | ai.events.ToolRequested | ai.events.Usage | ai.events.UserContent | ai.events.UserMessage) -> void throws never) // on_event // param
    let _6: bool
    let _7: bool
    let _8: ai.RunResult<string>
    let _9: ai.Agent
    let _10: reflect.Type
    let _11: ai.FunctionSpec<string>
    let _12: reflect.Type

    bb0: {
        _6 = copy _4 == const <omitted>;
        branch copy _6 -> [bb1, bb2];
    }

    bb1: {
        _4 = const null;
        goto -> bb2;
    }

    bb2: {
        _7 = copy _5 == const <omitted>;
        branch copy _7 -> [bb3, bb4];
    }

    bb3: {
        _5 = const null;
        goto -> bb4;
    }

    bb4: {
        _10 = load_type(unknown);
        _9 = call const fn ai.Agent.new<copy _10>(const <omitted>, const <omitted>, copy _4, const <omitted>, copy _5) -> [bb5];
    }

    bb5: {
        _11 = call const fn user.fixtures.optional_function_parameters.AskDocs@spec(copy _1, copy _2, copy _3) -> [bb6];
    }

    bb6: {
        _12 = load_type(string);
        _8 = virtual_call run as ai.Runner<Error = baml.errors.InvalidArgument | baml.errors.Timeout | baml.errors.UnknownError | baml.panics.Cancelled | reflect.errors.CompilationError | ai.errors.Failure><copy _12>(copy _9, copy _11) -> [bb7];
    }

    bb7: {
        _0 = copy _8.0;
        goto -> bb8;
    }

    bb8: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.AskDocs@build_request(query: string, max_results: int, filter: string, client: null | ai.Client) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string // filter // param
    let _4: null | ai.Client // client // param
    let _5: bool
    let _6: ai.FunctionSpec<string>
    let _7: reflect.Type

    bb0: {
        _5 = copy _4 == const <omitted>;
        branch copy _5 -> [bb1, bb2];
    }

    bb1: {
        _4 = const null;
        goto -> bb2;
    }

    bb2: {
        _6 = call const fn user.fixtures.optional_function_parameters.AskDocs@spec(copy _1, copy _2, copy _3) -> [bb3];
    }

    bb3: {
        _7 = load_type(string);
        _0 = call const fn ai.FunctionSpec.build_request<copy _7>(copy _6, copy _4) -> [bb4];
    }

    bb4: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.AskDocs@parse(json: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // json // param
    let _2: reflect.Type

    bb0: {
        _2 = load_type(string);
        _0 = call const fn baml.sap.parse<copy _2>(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.AskDocs@render_prompt(query: string, max_results: int, filter: string) -> ai.Prompt {
    // Locals:
    let _0: ai.Prompt // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string // filter // param
    let _4: ai.FunctionSpec<string>
    let _5: reflect.Type

    bb0: {
        _4 = call const fn user.fixtures.optional_function_parameters.AskDocs@spec(copy _1, copy _2, copy _3) -> [bb1];
    }

    bb1: {
        _5 = load_type(string);
        _0 = call const fn ai.FunctionSpec.prompt<copy _5>(copy _4) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.AskDocs@spec(query: string, max_results: int, filter: string) -> ai.FunctionSpec<string> {
    // Locals:
    let _0: ai.FunctionSpec<string> // _0 // return
    let _1: string // query // param [captured]
    let _2: int // max_results // param [captured]
    let _3: string // filter // param [captured]
    let _4: map<string, unknown>
    let _5: (ai.OutputFormat) -> ai.Prompt throws ai.errors.PromptRenderError
    let _6: ai.tools.Toolbox
    let _7: ai.tools.Tool[]
    let _8: ai.Client

    bb0: {
        _4 = { const "query": copy _1, const "max_results": copy _2, const "filter": copy _3 }: map<string, unknown>;
        _5 = make_closure lambda[0](copy _1, copy _2, copy _3);
        _7 = []: ai.tools.Tool[];
        _6 = call const fn ai.tools.Toolbox.new(copy _7) -> [bb1];
    }

    bb1: {
        _8 = call const fn ai.clients.resolve(const item user.fixtures.optional_function_parameters.TestClient) -> [bb2];
    }

    bb2: {
        _0 = ai.FunctionSpec<string> { const "AskDocs", copy _4, copy _5, copy _6, copy _8 };
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

// lambda[0]
fn .<lambda(AskDocs@spec, 0)>( __spec_output_format: ai.OutputFormat) -> ai.Prompt {
    // Locals:
    let _0: ai.Prompt // _0 // return
    let _1: ai.OutputFormat //  __spec_output_format // param
    let _2: unknown //  __prompt_render_err
    let _3: baml.TaggedString //  __spec_tagged_prompt
    let _4: string[] //  __tt_parts
    let _5: unknown[] //  __tt_values
    let _6: string //  __tt_cur
    let _7: int
    let _8: string[]
    let _9: string
    let _10: reflect.Type
    let _11: int
    let _12: unknown[]
    let _13: string
    let _14: reflect.Type
    let _15: int
    let _16: string[]
    let _17: " "
    let _18: reflect.Type
    let _19: int
    let _20: unknown[]
    let _21: int
    let _22: reflect.Type
    let _23: int
    let _24: string[]
    let _25: " "
    let _26: reflect.Type
    let _27: int
    let _28: unknown[]
    let _29: string
    let _30: reflect.Type
    let _31: int
    let _32: string[]
    let _33: ""
    let _34: reflect.Type
    let _35: string[]
    let _36: unknown[]
    let _37: string[]
    let _38: baml.TaggedString
    let _39: unknown[]
    let _40: baml.TaggedString
    let _41: ai.errors.PromptRenderError
    let _42: never

    bb0: {
        _4 = []: string[];
        _5 = []: unknown[];
        _6 = const "";
        _8 = copy _4;
        _9 = copy _6;
        _10 = load_type(string);
        _7 = call const fn baml.Array.push<copy _10>(copy _8, copy _9) -> [bb1, unwind: bb9];
    }

    bb1: {
        _6 = const "";
        _12 = copy _5;
        _13 = copy capture[0];
        _14 = load_type(unknown);
        _11 = call const fn baml.Array.push<copy _14>(copy _12, copy _13) -> [bb2, unwind: bb9];
    }

    bb2: {
        _6 = const " ";
        _16 = copy _4;
        _17 = copy _6;
        _18 = load_type(string);
        _15 = call const fn baml.Array.push<copy _18>(copy _16, copy _17) -> [bb3, unwind: bb9];
    }

    bb3: {
        _6 = const "";
        _20 = copy _5;
        _21 = copy capture[1];
        _22 = load_type(unknown);
        _19 = call const fn baml.Array.push<copy _22>(copy _20, copy _21) -> [bb4, unwind: bb9];
    }

    bb4: {
        _6 = const " ";
        _24 = copy _4;
        _25 = copy _6;
        _26 = load_type(string);
        _23 = call const fn baml.Array.push<copy _26>(copy _24, copy _25) -> [bb5, unwind: bb9];
    }

    bb5: {
        _6 = const "";
        _28 = copy _5;
        _29 = copy capture[2];
        _30 = load_type(unknown);
        _27 = call const fn baml.Array.push<copy _30>(copy _28, copy _29) -> [bb6, unwind: bb9];
    }

    bb6: {
        _32 = copy _4;
        _33 = copy _6;
        _34 = load_type(string);
        _31 = call const fn baml.Array.push<copy _34>(copy _32, copy _33) -> [bb7, unwind: bb9];
    }

    bb7: {
        _35 = copy _4;
        _36 = copy _5;
        _3 = baml.TaggedString { copy _35, copy _36 };
        _38 = copy _3;
        _37 = copy _38.0;
        _40 = copy _3;
        _39 = copy _40.1;
        _0 = call const fn ai.internal.assemble_llm_prompt(copy _37, copy _39) -> [bb8, unwind: bb9];
    }

    bb8: {
        return;
    }

    bb9: {
        throw_if_panic copy _2 -> bb10;
    }

    bb10: {
        _42 = copy _2;
        _41 = ai.errors.PromptRenderError { const "prompt template rendering threw", copy _42 };
        throw copy _41;
    }
}

fn user.fixtures.optional_function_parameters.AskDocs@stream(query: string, max_results: int, filter: string, client: null | ai.stream.StreamingClient, on_event: null | ((ai.events.AssistantMessage | ai.events.FinalProduced | ai.events.LLMCall | ai.events.RunStarted | ai.events.ToolCompleted | ai.events.ToolFailed | ai.events.ToolRequested | ai.events.Usage | ai.events.UserContent | ai.events.UserMessage) -> void throws never)) -> ai.stream.Stream<string | null, string> {
    // Locals:
    let _0: ai.stream.Stream<string | null, string> // _0 // return
    let _1: string // query // param
    let _2: int // max_results // param
    let _3: string // filter // param
    let _4: null | ai.stream.StreamingClient // client // param
    let _5: null | ((ai.events.AssistantMessage | ai.events.FinalProduced | ai.events.LLMCall | ai.events.RunStarted | ai.events.ToolCompleted | ai.events.ToolFailed | ai.events.ToolRequested | ai.events.Usage | ai.events.UserContent | ai.events.UserMessage) -> void throws never) // on_event // param
    let _6: bool
    let _7: bool
    let _8: ai.FunctionSpec<string>
    let _9: reflect.Type
    let _10: reflect.Type

    bb0: {
        _6 = copy _4 == const <omitted>;
        branch copy _6 -> [bb1, bb2];
    }

    bb1: {
        _4 = const null;
        goto -> bb2;
    }

    bb2: {
        _7 = copy _5 == const <omitted>;
        branch copy _7 -> [bb3, bb4];
    }

    bb3: {
        _5 = const null;
        goto -> bb4;
    }

    bb4: {
        _8 = call const fn user.fixtures.optional_function_parameters.AskDocs@spec(copy _1, copy _2, copy _3) -> [bb5];
    }

    bb5: {
        _9 = load_type(string | null);
        _10 = load_type(string);
        _0 = call const fn ai.stream.from_spec<copy _9, copy _10>(copy _8, copy _4, copy _5) -> [bb6];
    }

    bb6: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.SearchService.Run(self: fixtures.optional_function_parameters.SearchService, query: string, limit: int) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: fixtures.optional_function_parameters.SearchService // self // param
    let _2: string // query // param
    let _3: int // limit // param
    let _4: bool
    let _5: string

    bb0: {
        _4 = copy _3 == const <omitted>;
        branch copy _4 -> [bb1, bb2];
    }

    bb1: {
        _3 = const 20_i64;
        goto -> bb2;
    }

    bb2: {
        _5 = copy _1.0;
        _0 = call const fn user.fixtures.optional_function_parameters.Search(copy _2, copy _3, copy _5) -> [bb3];
    }

    bb3: {
        return;
    }
}

fn user.fixtures.optional_function_parameters.SearchService.Docs(self: fixtures.optional_function_parameters.SearchService, query: string, filter: string | null) -> string[] {
    // Locals:
    let _0: string[] // _0 // return
    let _1: fixtures.optional_function_parameters.SearchService // self // param
    let _2: string // query // param
    let _3: string | null // filter // param
    let _4: bool

    bb0: {
        _4 = copy _3 == const <omitted>;
        branch copy _4 -> [bb1, bb2];
    }

    bb1: {
        _3 = const null;
        goto -> bb2;
    }

    bb2: {
        _0 = call const fn user.fixtures.optional_function_parameters.SearchDocs(copy _2, const <omitted>, copy _3, const <omitted>) -> [bb3];
    }

    bb3: {
        return;
    }
}
